added full width on the track

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   </head>
   <body>
 
-  <h1 class="text-center">Red Race</h1>
+  <h1 class="text-center">Wagon Race</h1>
   <hr>
   <div>
-    <table class="racer_table">
+    <table class="racer_table" style="width: 100%">
       <tr id="player1_race">
         <td class="active"></td>
         <td></td>
@@ -61,6 +61,8 @@
     </div>
     </table>
     <hr>
+    <h4 class="text-center">Press "Q" to move the wagon</h4>
+    <h4 class="text-center">Press "P" to move the car</h4>
 
     <!-- Including Bootstrap JS (with its jQuery dependency) so that dynamic components work -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
